[package]
name = "opsx_notice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.19", features = ["headers", "macros"]}
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum"] }
serde = "1.0"
serde_json = "1.0"
tower = "0.4"