[package]
name = "opsx_notice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["headers", "macros", "multipart",]}
axum-extra = "0.7.1"

tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum"] }
serde = "1.0"
serde_json = "1.0"
tower = "0.4"

hmac = "0.10.1"
sha2 = "0.9.5"
base64 = "0.13.0"
chrono = "0.4"
reqwest = "0.11"

anyhow = "1.0.51"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
