[package]
name = "opsx_notice"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.5", features = ["macros", "multipart",]}
axum-extra = "0.9.3"
axum-server = "0.7.1"

tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum"] }
serde = "1.0"
serde_json = "1.0"
tower = "0.4"

hmac = "0.10.1"
sha2 = "0.9.5"
base64 = "0.13.0"
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }

anyhow = "1.0.51"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"


[profile.dev]
codegen-units = 4
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = false
panic = 'unwind'
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[profile.test]
codegen-units = 16
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false